fixed scrollbar containerization

--- a/frontend/css/viewer.css
+++ b/frontend/css/viewer.css
@@ -10,13 +10,18 @@ body {
 	width: 100%; /* having these set to a fixed number can hurt relative positioning */
 }
 
+.pbWrapper {
+	height: 400px;
+	margin-top: 3px;
+	overflow: auto;
+}
+
 .fa-2x {
     font-size: 1.5em;
 }
 
 .fancyStripeGreen {
 	height: 5px;
-	margin-bottom: 5px;
 	background: linear-gradient(180deg, #101010, green, #101010);
 	background-color: green;
 }
@@ -57,6 +62,7 @@ body {
 	padding-left: 10px;
 	padding-top: 10px;
 	padding-bottom: 5px;
+	height: 100px;
 	background: radial-gradient( rgba(0, 0, 0, 0.2), rgba(0, 0, 0, 0.6) ), url('../img/DarkTheme.png');
     background-position:center top;
 	font-weight: 700;
@@ -107,8 +113,9 @@ h2 {
 
 .frameWrapper {
 	display: block;
-	width: 318px; /* actually 318px but this is to account for vertical scrollbar */
+	width: 318px;
 	height: 500px;
+	overflow: hidden;
 	box-sizing: border-box;
 }
 
